--- a/public/layout/general/dragandresize.html
+++ b/public/layout/general/dragandresize.html
@@ -24,6 +24,23 @@
 		<!--end::Layout Themes-->
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+		<style>
+			#mydiv {
+        	position: absolute;
+        	z-index: 9;
+        	background-color: #f1f1f1;
+        	border: 1px solid #d3d3d3;
+        	text-align: center;
+        	}
+
+        	#mydivheader {
+        	padding: 10px;
+        	cursor: move;
+        	z-index: 10;
+        	background-color: #2196F3;
+        	color: #fff;
+        	}
+		</style>
 	</head>
 	<!--end::Head-->
 	<!--begin::Body-->
@@ -3326,9 +3343,9 @@
 						<div class="d-flex flex-column-fluid">
 							<!--begin::Container-->
 							<div id="testbody" class="container">
-								<div id="mydiv" style="position: absolute; z-index: 9; background-color: #f1f1f1; border: 1px solid #d3d3d3; text-align: center;">
+								<div id="mydiv">
                                     <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-                                    <div id="mydivheader" style="padding: 10px; cursor: move; z-index: 10; background-color: #2196F3; color: #fff;">
+                                    <div id="mydivheader">
                                         Click here to move
                                         <button onclick="removeDiv('mydiv')">X</button>
                                     </div>
@@ -5217,15 +5234,25 @@
 
         <script>
             function myFunction() {
-                let div_new = document.createElement("DIV");
-                div_new.id = "myDiv" + Date.now() // for the movement needs a unique ID
-                div_new.style = "position: absolute; z-index: 9; background-color: #f1f1f1; border: 1px solid #d3d3d3; text-align: center;"
-                div_new.innerHTML = '<div id="mydivheader" style="padding: 10px; cursor: move; z-index: 10; background-color: #2196F3; color: #fff;">Click here to move <button onclick="removeDiv(&quot;myDiv&quot;)">X</button></div><p>Move</p><p>this</p><p>DIV</p>';
-                dragElement(div_new);
-                document.body.appendChild(div_new);
-                $( div_new ).resizable();
-            }
+    			let div_new = document.createElement("DIV");
+    			div_new.id = "myDiv" + Date.now() // for the movement needs a unique ID
+    			div_new.style = "position: absolute; z-index: 9; background-color: #f1f1f1; border: 1px solid #d3d3d3; text-align: center; top: 100px; left: 100px;";
+    			div_new.innerHTML = '<div id="' + div_new.id + 'header" style="padding: 10px; cursor: move; z-index: 10; background-color: #2196F3; color: #fff;">Click here to move <button  onclick="removeDiv(&quot;'+div_new.id+'&quot;)">X</button></div><p>Move</p><p>this</p><p>DIV</p>';
+    			document.body.appendChild(div_new);
+    			dragElement(div_new);
+    			$( div_new ).resizable();
+			}
         </script>
+
+		<script>
+			if (document.getElementById(elmnt.id + "header")) {
+    			// if present, the header is where you move the DIV from:
+    			document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+			} else {
+    			// otherwise, move the DIV from anywhere inside the DIV:
+    			elmnt.onmousedown = dragMouseDown;
+			}
+		</script>
 
         <script>
             function removeDiv(myDiv) {
