Tiep tuc thao tac voi man hinh keo tha

--- a/public/layout/general/dragandresize.html
+++ b/public/layout/general/dragandresize.html
@@ -3349,7 +3349,13 @@
                                         Click here to move
                                         <button onclick="removeDiv('mydiv')">X</button>
                                     </div>
-                                    <textarea name="" id="" cols="30" rows="10" wrap="hard" style="box-sizing: border-box; height: 100%; width: 100%; resize: none; background-color: #ffa800;">asfasfasf</textarea>
+                                    <!-- <textarea name="" id="textarea1" cols="30" rows="10" wrap="hard" style="box-sizing: border-box; height: 100%; width: 100%; resize: none; background-color: #ffa800;">asfasfasf</textarea> -->
+									<span>
+										asfasfaswf
+									</span><br>
+									<span id="span1">
+										asfgasgasgasgasdg
+									</span>
                                 </div>
                                 <button onclick="myFunction()">Thêm thẻ</button>
 							</div>
@@ -5280,7 +5286,7 @@
 
 			// Now apply it to the two divs:
 			handleDropTargeting(document.getElementById(div_new));
-			handleDropTargeting(document.getElementById(myDiv));
+			handleDropTargeting(document.getElementById(span1));
 		</script>
 	</body>
 	<!--end::Body-->
