--- a/public/layout/general/dragandresize.html
+++ b/public/layout/general/dragandresize.html
@@ -26,27 +26,47 @@
 		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
 		<style>
 			#mydiv {
-        	position: absolute;
-        	z-index: 9;
-        	background-color: #f1f1f1;
-        	border: 1px solid #d3d3d3;
-        	text-align: center;
+        		position: absolute;
+        		z-index: 9;
+        		background-color: #f1f1f1;
+        		border: 1px solid #d3d3d3;
+        		text-align: center;
         	}
 
         	#mydivheader {
-        	padding: 10px;
-        	cursor: move;
-        	z-index: 10;
-        	background-color: #007196;
-        	color: #fff;
+        		padding: 10px;
+        		cursor: move;
+        		z-index: 10;
+        		background-color: #007196;
+        		color: #fff;
         	}
 
 			#draggable { 
-				width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; 
+				z-index: 9;
+				width: 100px; 
+				height: 100px; 
+				padding: 0.5em; 
+				float: left; 
+				margin: 
+				10px 10px 10px 0; 
 			}
 
-			#droppable { 
-				width: 150px; height: 150px; padding: 0.5em; float: left; margin: 10px; 
+			#droppable {
+				width: 150px; 
+				height: 150px; 
+				padding: 0.5em; 
+				float: left; 
+				margin: 10px; 
+				text-align: center;
+			}
+
+			#div1, #div2 {
+			  	float: left;
+			  	width: 200px;
+			  	height: 50px;
+			  	margin: 10px;
+			  	padding: 10px;
+			  	border: 1px solid black;
 			}
 		</style>
 	</head>
@@ -3353,21 +3373,40 @@
 							<div id="testbody" class="container">
 								<div id="mydiv">
                                     <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-                                    <div id="mydivheader">
+                                    <div id="mydivheader" >
                                         Click here to move
                                         <button onclick="removeDiv('mydiv')">X</button>
                                     </div>
-                                    <textarea name="" id="textarea1" cols="30" rows="10" wrap="hard" style="box-sizing: border-box; height: 100%; width: 100%; resize: none; background-color: #ffa800;">asfasfasf</textarea>
-                                </div>
+                                    <!-- <textarea name="" id="textarea1" cols="30" rows="10" wrap="hard" style="box-sizing: border-box; height: 100%; width: 100%; resize: none; background-color: #ffa800;">asfasfasf</textarea> -->
+									<div id="mydivbody" style="box-sizing: border-box; width: 100%; height: 100%; background-color: #ffa800; " contenteditable="true" ondrop="drop(event)" ondragover="allowDrop(event)">
+
+									</div>
+								</div>
                                 <button onclick="myFunction()">Thêm thẻ</button>
 
-								<div id="draggable" class="ui-widget-content">
-									<p>Drag me to my target</p>
+								<div id="testdiv" style="border: 5px; height: 50px; width: 200px;">
+
+								</div>
+
+								<!-- <div id="draggable" class="ui-widget-content">
+									<p>A DIV to be dragged</p>
 								</div>
 								   
 								<div id="droppable" class="ui-widget-header">
+									<div id="droppableheader">
+										Click here to move
+									</div>
 									<p>Drop here</p>
 								</div>
+
+								<h2>Drag and Drop</h2>
+								<p>Drag the image back and forth between the two div elements.</p> -->
+
+								<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
+									<span draggable="true" ondragstart="drag(event)" id="drag1" width="88" height="31">Test moving</span>
+								</div>
+
+								<div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 							</div>
 							<!--end::Container-->
 						</div>
@@ -5204,6 +5243,8 @@
             // Make the DIV element draggable:
             dragElement(document.getElementById("mydiv"));
 
+			dragElement(document.getElementById("droppable"));
+
             function dragElement(elmnt) {
                 var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
                 if (document.getElementById(elmnt.id + "header")) {
@@ -5251,7 +5292,7 @@
     			let div_new = document.createElement("DIV");
     			div_new.id = "myDiv" + Date.now() // for the movement needs a unique ID
     			div_new.style = "position: absolute; z-index: 9; background-color: #f1f1f1; border: 1px solid #d3d3d3; text-align: center; top: 100px; left: 100px;";
-    			div_new.innerHTML = '<div id="' + div_new.id + 'header" style="padding: 10px; cursor: move; z-index: 10; background-color: #007196; color: #fff;">Click here to move <button  onclick="removeDiv(&quot;'+div_new.id+'&quot;)">X</button></div><textarea name="" id="" cols="30" rows="10" wrap="hard" style="box-sizing: border-box; height: 100%; width: 100%; resize: none; background-color: #ffa800;">asfasfasf</textarea>';
+    			div_new.innerHTML = '<div id="' + div_new.id + 'header" ondrop="drop(event)" ondragover="allowDrop(event)" style="padding: 10px; cursor: move; z-index: 10; background-color: #007196; color: #fff;">Click here to move <button  onclick="removeDiv(&quot;'+div_new.id+'&quot;)">X</button></div><textarea name="" id="" cols="30" rows="10" wrap="hard" style="box-sizing: border-box; height: 100%; width: 100%; resize: none; background-color: #ffa800;">asfasfasf</textarea>';
     			document.body.appendChild(div_new);
     			dragElement(div_new);
     			$( div_new ).resizable();
@@ -5277,43 +5318,40 @@
             }
         </script>
 
-		<!-- Test script to move content from one DIV to another one -->
-		<!-- <script>
-			// Keeps track of the drop target that the mouse is currently hovering over
-			let dropTarget = null;
-
-			function handleDropTargeting(element) {
-			    // Add a mouseenter listener - when the mouse enters the target element, this will be called
-			    element.addEventListener('mouseenter', () => {
-			        dropTarget = element;
-			    });
-			
-			    // Add a mouseleave listener - when the mouse leaves the target element, this will be called
-			    element.addEventListener('mouseleave', () => {
-			        dropTarget = null;
-			    });
-			}
-
-			// Now apply it to the two divs:
-			handleDropTargeting(document.getElementById(div_new));
-			handleDropTargeting(document.getElementById(span1));
-		</script> -->
-
 		<!-- Test script for copying, moving DIV content  -->
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 		<script>
 		$( function() {
+			$( "#textarea1" ).droppable();
     		$( "#draggable" ).draggable();
+			$( "#droppable" ).draggable();
     		$( "#droppable" ).droppable({
     			drop: function( event, ui ) {
     				$( this )
     		      	.addClass( "ui-state-highlight" )
     		      	.find( "p" )
-    		        .html( "Dropped!" );
+    		        .html( "DIV DROPPED!" );
     		  	}
     		});
 		} );
+		</script>
+
+		<!-- Move the objects -->
+		<script>
+			function allowDrop(ev) {
+		  	ev.preventDefault();
+		}
+
+		function drag(ev) {
+		  	ev.dataTransfer.setData("text", ev.target.id);
+		}
+
+		function drop(ev) {
+		  	ev.preventDefault();
+		  	var data = ev.dataTransfer.getData("text");
+		  	ev.target.appendChild(document.getElementById(data));
+		}
 		</script>
 		
 	</body>
